--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -84,6 +84,52 @@ a {
     margin-bottom: 60px;
 }
 
+  
+.signup-box {
+    margin: auto; 
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
+  }
+  
+  .signup-box label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    text-align: left;
+  }
+  
+  .signup-box input {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 1px solid #90caf9; /* Light Blue Border */
+    border-radius: 5px;
+  }
+  
+  .signup-box .signup-btn {
+    background-color: #42a5f5; /* Blue Button */
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .signup-box .signup-btn:hover {
+    background-color: #1e88e5; /* Darker Blue Hover */
+  }
+  
+  .error {
+    color: red;
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
+  }
+
 
 .left-box, .right-box {
     width: 15%; /* Adjust this as per your design */
@@ -169,6 +215,7 @@ a {
     background-color: #87cefa;
 }
 
+
 /* Responsive layout for smaller screens */
 @media (max-width: 800px) {
     .logo {
@@ -236,6 +283,7 @@ a:hover {
 .login-box > h1 {
     margin-bottom: 20px;
 }
+
 
 /* Adjacent Sibling Selector */
 label + input {
